Adjust minimum-stability

--- a/composer.json
+++ b/composer.json
@@ -45,5 +45,7 @@
   },
   "scripts": {
     "post-create-project-cmd": "Bigfork\\Installer\\Install::postCreateProject"
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
