--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
 	"extra": {
     "expose": [
       "app/css",
-      "app/images"
+      "app/images",
+      "themes/default/css",
+      "themes/default/js"
     ],
 		"project-files": [
       "./.editorconfig",
