--- a/app/_config/config.yml
+++ b/app/_config/config.yml
@@ -1,12 +1,14 @@
 ---
 Name: app
 ---
+SilverStripe\Admin\LeftAndMain:
+  extra_requirements_css:
+    - app/css/cms.css
+  help_link: 'http://silverstripe.bigfork.co.uk/v3/'
+SilverStripe\Core\Manifest\ModuleManifest:
+  project: app
 SilverStripe\View\SSViewer:
   themes:
   - '$public'
   - 'default'
   - '$default'
-SilverStripe\Admin\LeftAndMain:
-  extra_requirements_css:
-    - app/css/cms.css
-  help_link: 'http://silverstripe.bigfork.co.uk/v3/'
