--- a/composer.json
+++ b/composer.json
@@ -4,18 +4,21 @@
 	"description": "Bigfork’s SilverStripe CMS recipe",
 	"homepage": "https://www.bigfork.co.uk",
 	"license": "BSD-3-Clause",
-	"require": {
-		"silverstripe/recipe-plugin": "^1",
-		"silverstripe/cms": "4.x-dev",
-		"silverstripe/framework": "4.x-dev",
-		"bigfork/htmleditorsrcset": "^2",
-		"feejin/silverstripe-securitytemplates": "^2",
-		"heyday/silverstripe-responsive-images": "^2",
-		"kinglozzer/bfgoogleanalytics": "^2",
-		"kinglozzer/metatitle": "^2",
-		"silverstripe/googlesitemaps": "~1.8.0",
-		"symbiote/silverstripe-gridfieldextensions": "^3"
-	},
+  "require": {
+    "silverstripe/recipe-plugin": "^1",
+    "silverstripe/assets": "1.x-dev",
+    "silverstripe/config": "1.x-dev",
+    "silverstripe/cms": "4.x-dev",
+    "silverstripe/errorpage": "1.x-dev",
+    "silverstripe/framework": "4.x-dev",
+    "bigfork/htmleditorsrcset": "^2",
+    "feejin/silverstripe-securitytemplates": "^2",
+    "heyday/silverstripe-responsive-images": "^2",
+    "kinglozzer/bfgoogleanalytics": "^2",
+    "kinglozzer/metatitle": "^2",
+    "silverstripe/googlesitemaps": "~1.8.0",
+    "symbiote/silverstripe-gridfieldextensions": "^3"
+  },
 	"require-dev": {
 		"phpunit/phpunit": "^5"
 	},
