Add SiteSettings tab from shoelace

--- a/app/_config/config.yml
+++ b/app/_config/config.yml
@@ -12,3 +12,6 @@ SilverStripe\View\SSViewer:
   - '$public'
   - 'default'
   - '$default'
+SilverStripe\SiteConfig\SiteConfig:
+  extensions:
+    - Bigfork\Extensions\SiteConfigExtension
