Update default unit test path

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,6 @@
 <phpunit bootstrap="vendor/silverstripe/cms/tests/bootstrap.php" colors="true">
     <testsuite name="Default">
-        <directory>mysite/tests</directory>
+        <directory>app/tests</directory>
     </testsuite>
 
     <groups>
