--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -2,9 +2,9 @@
   "name": "default",
   "version": "1.0.0",
   "devDependencies": {
-    "babel-core": "^6",
-    "babel-preset-env": "^1.6.1",
-    "babelify": "^8.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babelify": "^10.0.0-beta.1",
     "browser-sync": "^2.13.0",
     "browserify": "^15.2.0",
     "css-mqpacker": "^6.0.1",
