--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -8,7 +8,6 @@
     "browser-sync": "^2.13.0",
     "browserify": "^15.2.0",
     "css-mqpacker": "^6.0.1",
-    "glob": "^7.0.5",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.1.0",
     "gulp-css-globbing": "^0.1.8",
@@ -18,14 +17,15 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-tap": "^1.0.1",
     "gulp-tinypng-compress": "^1.2.1",
     "gulp-uglify": "^3.0.0",
     "gulp-watch": "^5.0.0",
     "jshint": "^2.9.2",
     "sort-css-media-queries": "^1.3.4",
     "susy": "^3.0.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-buffer": "^1.0.0"
   }
 }
