Add dummy email address to example env file

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ SS_ENVIRONMENT_TYPE="dev"
 
 SS_DEFAULT_ADMIN_USERNAME="admin"
 SS_DEFAULT_ADMIN_PASSWORD="password"
+
+SS_SEND_ALL_EMAILS_TO="cms@bigfork.co.uk"
