--- a/themes/default/.eslintrc.yml
+++ b/themes/default/.eslintrc.yml
@@ -5,6 +5,7 @@ env:
   node: true
 extends: 'eslint:recommended'
 parserOptions:
+  ecmaVersion: 2018
   sourceType: module
 rules:
   no-console: 0
