--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -1,29 +1,36 @@
 {
-  "name": "default",
-  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production webpack --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babelify": "^10.0.0-beta.1",
-    "browser-sync": "^2.13.0",
-    "browserify": "^15.2.0",
-    "css-mqpacker": "^6.0.1",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.1.0",
-    "gulp-css-globbing": "^0.1.8",
-    "gulp-cssimport": "^6.0.0",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^7.0.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-tap": "^1.0.1",
-    "gulp-tinypng-compress": "^1.2.1",
-    "gulp-uglify": "^3.0.0",
-    "gulp-watch": "^5.0.0",
-    "sort-css-media-queries": "^1.3.4",
-    "susy": "^3.0.1",
-    "vinyl-buffer": "^1.0.0"
-  }
+    "browser-sync": "^2.26.5",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "clean-webpack-plugin": "^2.0.2",
+    "copy-webpack-plugin": "^5.0.3",
+    "cross-env": "^5.2.0",
+    "imagemin": "^6.1.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^7.0.0",
+    "imagemin-svgo": "^7.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
+    "import-glob-loader": "^1.1.0",
+    "laravel-mix": "^4.0.15",
+    "node-sass-glob-importer": "^5.3.1",
+    "sass": "^1.20.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "vue-template-compiler": "^2.6.10",
+    "webpack-dev-server": "^3.4.1"
+  },
+  "browserslist": [
+    "last 1 version",
+    "ie 10",
+    ">1%"
+  ]
 }
