--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -25,6 +25,7 @@
     "sass": "^1.20.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "svg-spritemap-webpack-plugin": "^3.3.4",
     "vue-template-compiler": "^2.6.10",
     "webpack-dev-server": "^3.4.1"
   },
