--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -14,6 +14,7 @@
     "clean-webpack-plugin": "^2.0.2",
     "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.0",
+    "css-mqpacker": "^7.0.0",
     "imagemin": "^6.1.0",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^7.0.0",
