--- a/app/_config/config.yml
+++ b/app/_config/config.yml
@@ -12,6 +12,9 @@ SilverStripe\Admin\LeftAndMain:
   extra_requirements_css:
     - app/css/cms.css
   help_link: 'http://silverstripe.bigfork.co.uk/v3/'
+SilverStripe\Forms\HTMLEditor\TinyMCEConfig:
+  editor_css:
+    - 'themes/default/dist/css/editor.css'
 SilverStripe\Control\Email\Email:
   admin_email: ''
 SilverStripe\Core\Injector\Injector:
