--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # https://docs.silverstripe.org/en/4/getting_started/environment_management/#core-environment-variables
 
 # DB credentials
-SS_DATABASE_CLASS="MySQLPDODatabase"
+SS_DATABASE_CLASS="MySQLDatabase"
 
 SS_DATABASE_USERNAME="root"
 SS_DATABASE_PASSWORD="root"
