--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
 		"silverstripe/config": "^1",
 		"silverstripe/cms": "^4",
 		"silverstripe/framework": "^4",
+		"silverstripe/mimevalidator": "^2",
 		"silverstripe/recipe-plugin": "^1",
 		"symbiote/silverstripe-gridfieldextensions": "^3",
 		"wilr/silverstripe-googlesitemaps": "^2"
