--- a/public/.htaccess
+++ b/public/.htaccess
@@ -293,14 +293,15 @@ FileETag None
     ExpiresByType image/x-icon                          "access plus 1 week"
 
 # Media: images, video, audio
-    ExpiresByType image/gif                             "access plus 1 month"
-    ExpiresByType image/png                             "access plus 1 month"
-    ExpiresByType image/jpg                             "access plus 1 month"
-    ExpiresByType image/jpeg                            "access plus 1 month"
-    ExpiresByType video/ogg                             "access plus 1 month"
-    ExpiresByType audio/ogg                             "access plus 1 month"
-    ExpiresByType video/mp4                             "access plus 1 month"
-    ExpiresByType video/webm                            "access plus 1 month"
+    ExpiresByType image/gif                             "access plus 1 year"
+    ExpiresByType image/png                             "access plus 1 year"
+    ExpiresByType image/jpg                             "access plus 1 year"
+    ExpiresByType image/jpeg                            "access plus 1 year"
+    ExpiresByType video/ogg                             "access plus 1 year"
+    ExpiresByType audio/ogg                             "access plus 1 year"
+    ExpiresByType video/mp4                             "access plus 1 year"
+    ExpiresByType video/webm                            "access plus 1 year"
+    ExpiresByType image/svg+xml                         "access plus 1 year"
 
 # HTC files  (css3pie)
     ExpiresByType text/x-component                      "access plus 1 month"
@@ -309,11 +310,10 @@ FileETag None
     ExpiresByType application/x-font-ttf                "access plus 1 month"
     ExpiresByType font/opentype                         "access plus 1 month"
     ExpiresByType application/x-font-woff               "access plus 1 month"
-    ExpiresByType image/svg+xml                         "access plus 1 month"
     ExpiresByType application/vnd.ms-fontobject         "access plus 1 month"
 
 # CSS and JavaScript
-    ExpiresByType text/css                              "access plus 1 week"
-    ExpiresByType application/javascript                "access plus 1 week"
+    ExpiresByType text/css                              "access plus 1 year"
+    ExpiresByType application/javascript                "access plus 1 year"
 
 </IfModule>
