--- a/composer.json
+++ b/composer.json
@@ -1,49 +1,51 @@
 {
-	"name": "bigfork/silverstripe-recipe",
-	"type": "silverstripe-recipe",
-	"description": "Bigfork’s SilverStripe CMS recipe",
-	"homepage": "https://www.bigfork.co.uk",
-	"license": "BSD-3-Clause",
-	"require": {
-		"bigfork/google-analytics": "^1",
-		"bigfork/htmleditorsrcset": "^2",
-		"bigfork/silverstripe-fail-whale": "^0",
-		"bigfork/silverstripe-simpleseo": "^2",
-		"heyday/silverstripe-responsive-images": "^2",
-		"jonom/focuspoint": "^3",
-		"kinglozzer/metatitle": "^2",
-		"sentry/sentry": "^1",
-		"silverstripe/assets": "^1",
-		"silverstripe/asset-admin": "^1",
-		"silverstripe/config": "^1",
-		"silverstripe/cms": "^4",
-		"silverstripe/framework": "^4",
-		"silverstripe/login-forms": "^4.3",
-		"silverstripe/mimevalidator": "^2",
-		"silverstripe/recipe-plugin": "^1",
-		"symbiote/silverstripe-gridfieldextensions": "^3",
-		"wilr/silverstripe-googlesitemaps": "^2"
-	},
-	"require-dev": {
-		"phpunit/phpunit": "^5"
-	},
-	"extra": {
-		"expose": [
-			"app/css",
-			"themes/default/dist"
-		],
+    "name": "bigfork/silverstripe-recipe",
+    "type": "silverstripe-recipe",
+    "description": "Bigfork’s SilverStripe CMS recipe",
+    "homepage": "https://www.bigfork.co.uk",
+    "license": "BSD-3-Clause",
+    "require": {
+        "bigfork/google-analytics": "^1",
+        "bigfork/htmleditorsrcset": "^2",
+        "bigfork/silverstripe-fail-whale": "^0",
+        "bigfork/silverstripe-simpleseo": "^2",
+        "heyday/silverstripe-responsive-images": "^2",
+        "jonom/focuspoint": "^3",
+        "kinglozzer/metatitle": "^2",
+        "sentry/sentry": "^1",
+        "silverstripe/assets": "^1",
+        "silverstripe/asset-admin": "^1",
+        "silverstripe/config": "^1",
+        "silverstripe/cms": "^4",
+        "silverstripe/framework": "^4",
+        "silverstripe/login-forms": "^4.3",
+        "silverstripe/mimevalidator": "^2",
+        "silverstripe/recipe-plugin": "^1",
+        "symbiote/silverstripe-gridfieldextensions": "^3",
+        "wilr/silverstripe-googlesitemaps": "^2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5"
+    },
+    "extra": {
+        "expose": [
+            "app/css",
+            "themes/default/dist"
+        ],
         "resources-dir": "_resources"
-	},
-	"autoload": {
-        "files": ["app/src/bootstrap.php"],
-		"psr-4": {
-			"App\\": "app/src",
-			"Bigfork\\": "util/Bigfork"
-		}
-	},
-	"scripts": {
-		"post-create-project-cmd": "Bigfork\\Installer\\Install::postCreateProject"
-	},
-	"minimum-stability": "dev",
-	"prefer-stable": true
+    },
+    "autoload": {
+        "files": [
+            "app/src/bootstrap.php"
+        ],
+        "psr-4": {
+            "App\\": "app/src",
+            "Bigfork\\": "util/Bigfork"
+        }
+    },
+    "scripts": {
+        "post-create-project-cmd": "Bigfork\\Installer\\Install::postCreateProject"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
