Added canonical URL to meta tags

--- a/app/_config/config.yml
+++ b/app/_config/config.yml
@@ -21,6 +21,9 @@ SilverStripe\Core\Injector\Injector:
   Intervention\Image\ImageManager:
     constructor:
       - { driver: imagick }
+App\Model\Page:
+  extensions:
+    - App\Extensions\Pages\PageExtension
 SilverStripe\ORM\FieldType\DBString:
   extensions:
     - App\Extensions\ORM\DBStringExtension
