--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -2,33 +2,35 @@
   "private": true,
   "scripts": {
     "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "npm run development -- --watch",
-    "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production webpack --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "mix --production"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.7",
-    "browser-sync-webpack-plugin": "^2.2.2",
+    "browser-sync": "^2.27.4",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "clean-webpack-plugin": "^2.0.2",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "^5.1.2",
     "cross-env": "^5.2.1",
     "css-mqpacker": "^7.0.0",
     "imagemin": "^6.1.0",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^7.0.0",
-    "imagemin-svgo": "^7.0.0",
+    "imagemin-svgo": "^7.1.0",
     "imagemin-webpack-plugin": "^2.4.2",
     "import-glob-loader": "^1.1.0",
-    "laravel-mix": "^4.1.4",
+    "laravel-mix": "^6.0.25",
     "node-sass-glob-importer": "^5.3.2",
-    "sass": "^1.25.0",
+    "postcss": "^8.3.5",
+    "sass": "^1.35.2",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "svg-spritemap-webpack-plugin": "^3.5.3",
-    "vue-template-compiler": "^2.6.11",
-    "webpack-dev-server": "^3.10.1"
+    "svg-spritemap-webpack-plugin": "^3.9.1",
+    "vue-template-compiler": "^2.6.14",
+    "webpack-dev-server": "^3.11.2"
   },
   "browserslist": [
     "last 1 version",
