--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -24,12 +24,13 @@
     "import-glob-loader": "^1.1.0",
     "laravel-mix": "^6.0.25",
     "node-sass-glob-importer": "^5.3.2",
-    "postcss": "^7.0.36",
+    "postcss": "^8.3.6",
     "sass": "^1.35.2",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^10.2.0",
     "style-loader": "^0.23.1",
     "svg-spritemap-webpack-plugin": "^3.9.1",
     "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.47.1",
     "webpack-dev-server": "^3.11.2"
   },
   "browserslist": [
