--- a/deploy/hosts.yml
+++ b/deploy/hosts.yml
@@ -3,8 +3,9 @@
   user: '__USER__'
 
 .staging: &staging
-  hostname: '__HOSTNAME__'
-  user: '__USER__'
+  hostname: 'stickyfork'
+  user: 'bigfork'
+  deploy_path: '/var/www/vhosts/stage/__SLOT__'
 
 .defaults: &defaults
   repository: '__REPOSITORY__'
@@ -13,27 +14,27 @@
     - 'app'
 
 production:
-  <<: *defaults
   <<: *live
+  <<: *defaults
   stage: production
 prod:
-  <<: *defaults
   <<: *live
+  <<: *defaults
   stage: production
 live:
-  <<: *defaults
   <<: *live
+  <<: *defaults
   stage: production
 
 staging:
-  <<: *defaults
   <<: *staging
+  <<: *defaults
   stage: staging
 stage:
-  <<: *defaults
   <<: *staging
+  <<: *defaults
   stage: staging
 test:
-  <<: *defaults
   <<: *staging
+  <<: *defaults
   stage: staging
