--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -16,14 +16,13 @@
     "copy-webpack-plugin": "^5.1.2",
     "cross-env": "^5.2.1",
     "css-mqpacker": "^7.0.0",
+    "glob-import-loader": "^1.2.0",
     "imagemin": "^6.1.0",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^9.0.0",
     "imagemin-svgo": "^7.1.0",
     "imagemin-webpack-plugin": "^2.4.2",
-    "import-glob-loader": "^1.1.0",
     "laravel-mix": "^6.0.25",
-    "node-sass-glob-importer": "^5.3.2",
     "postcss": "^8.3.6",
     "sass": "^1.35.2",
     "sass-loader": "^10.2.0",
