--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "bigfork/silverstripe-recipe",
-    "type": "silverstripe-recipe",
-    "description": "Bigfork’s SilverStripe CMS recipe",
-    "homepage": "https://www.bigfork.co.uk",
-    "license": "BSD-3-Clause",
-    "require": {
+	"name": "bigfork/silverstripe-recipe",
+	"type": "silverstripe-recipe",
+	"description": "Bigfork’s SilverStripe CMS recipe",
+	"homepage": "https://www.bigfork.co.uk",
+	"license": "BSD-3-Clause",
+	"require": {
 		"bigfork/htmleditorsrcset": "^2",
 		"bigfork/silverstripe-fail-whale": "^0",
 		"bigfork/silverstripe-googletagmanager": "^2.0",
@@ -25,28 +25,35 @@
 		"symbiote/silverstripe-gridfieldextensions": "^3",
 		"wilr/silverstripe-googlesitemaps": "^2"
 	},
-    "require-dev": {
-        "phpunit/phpunit": "^5"
-    },
-    "extra": {
-        "expose": [
-            "app/css",
-            "themes/default/dist"
-        ],
-        "resources-dir": "_resources"
-    },
-    "autoload": {
-        "files": [
-            "app/src/bootstrap.php"
-        ],
-        "psr-4": {
-            "App\\": "app/src",
-            "Bigfork\\": "util/Bigfork"
-        }
-    },
-    "scripts": {
-        "post-create-project-cmd": "Bigfork\\Installer\\Install::postCreateProject"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+	"require-dev": {
+		"phpunit/phpunit": "^5"
+	},
+	"extra": {
+		"expose": [
+			"app/css",
+			"themes/default/dist"
+		],
+		"resources-dir": "_resources"
+	},
+	"autoload": {
+		"files": [
+			"app/src/bootstrap.php"
+		],
+		"psr-4": {
+			"App\\": "app/src",
+			"Bigfork\\": "util/Bigfork"
+		}
+	},
+	"scripts": {
+		"post-create-project-cmd": "Bigfork\\Installer\\Install::postCreateProject"
+	},
+	"minimum-stability": "dev",
+	"prefer-stable": true,
+	"config": {
+		"allow-plugins": {
+			"composer/installers": true,
+			"silverstripe/recipe-plugin": true,
+			"silverstripe/vendor-plugin": true
+		}
+	}
 }
