Replace outdated Sentry config

--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
 		"bigfork/htmleditorsrcset": "^2",
 		"bigfork/silverstripe-fail-whale": "^0",
 		"bigfork/silverstripe-googletagmanager": "^2.0",
+		"bigfork/silverstripe-sentry-handler": "^1",
 		"bigfork/silverstripe-simpleseo": "^2",
 		"firebrandhq/silverstripe-phonelink": "^2.0",
 		"heyday/silverstripe-responsive-images": "^2",
 		"jonom/focuspoint": "^3",
 		"kinglozzer/metatitle": "^2",
-		"sentry/sentry": "^1",
 		"silverstripe/asset-admin": "^1",
 		"silverstripe/assets": "^1",
 		"silverstripe/cms": "^4",
