Made the following changes: - Added Elemental and updated the Page.ss layout to use this. - Removed site settings admin and moved it to Settings - Added Head and footer scripts to Settings - Removed Tagline from Settings - Added Blog Post extension for removing Summary from the accordion - Added grouped cms menus and added archive, redirected urls and settings to "Site settings".

--- a/app/_config/config.yml
+++ b/app/_config/config.yml
@@ -24,6 +24,9 @@ SilverStripe\Core\Injector\Injector:
 App\Model\Page:
   extensions:
     - App\Extensions\Pages\PageExtension
+SilverStripe\Blog\Model\BlogPost:
+  extensions:
+    - App\Extensions\Blog\BlogPostExtension
 SilverStripe\ORM\FieldType\DBString:
   extensions:
     - App\Extensions\ORM\DBStringExtension
