--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
 		"bigfork/silverstripe-googletagmanager": "^2.0",
 		"bigfork/silverstripe-sentry-handler": "^1",
 		"bigfork/silverstripe-simpleseo": "^2",
+		"dnadesign/silverstripe-elemental": "^4",
 		"firebrandhq/silverstripe-phonelink": "^2.0",
 		"heyday/silverstripe-responsive-images": "^2",
+		"jinjie/codeeditorfield": "^0",
 		"jonom/focuspoint": "^4",
 		"kinglozzer/metatitle": "^2",
 		"silverstripe/asset-admin": "^1",
@@ -22,7 +24,9 @@
 		"silverstripe/login-forms": "^4.3",
 		"silverstripe/mimevalidator": "^2",
 		"silverstripe/recipe-plugin": "^1",
+		"silverstripe/redirectedurls": "dev-master",
 		"symbiote/silverstripe-gridfieldextensions": "^3",
+		"symbiote/silverstripe-grouped-cms-menu": "^4.0",
 		"wilr/silverstripe-googlesitemaps": "^2"
 	},
 	"require-dev": {
