--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,12 @@ _resampled
 /*.log
 /.env
 /.site
+/.graphql-generated/
 /.idea/
 /.vscode/
 /public/assets/
 /public/.well-known/
+/public/_graphql/
 /public/resources/
 /public/_resources/
 /silverstripe-cache/
