--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
 		"silverstripe/cms": "^4",
 		"silverstripe/config": "^1",
 		"silverstripe/framework": "^4",
+		"silverstripe/graphql": "^4",
 		"silverstripe/login-forms": "^4",
 		"silverstripe/mimevalidator": "^2",
 		"silverstripe/recipe-plugin": "^1",
@@ -28,7 +29,7 @@
 		"wilr/silverstripe-googlesitemaps": "^2"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^5"
+		"phpunit/phpunit": "^9.5"
 	},
 	"extra": {
 		"expose": [
