--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -13,24 +13,25 @@
     "browser-sync": "^2.27.7",
     "browser-sync-webpack-plugin": "^2.3.0",
     "clean-webpack-plugin": "^2.0.2",
-    "copy-webpack-plugin": "^5.1.2",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^5.2.1",
-    "css-mqpacker": "^7.0.0",
     "glob-import-loader": "^1.2.0",
-    "imagemin": "^6.1.0",
-    "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-pngquant": "^9.0.0",
-    "imagemin-svgo": "^7.1.0",
-    "imagemin-webpack-plugin": "^2.4.2",
-    "laravel-mix": "^6.0.39",
+    "image-minimizer-webpack-plugin": "^3.6.1",
+    "imagemin": "^8.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^10.0.1",
+    "laravel-mix": "^6.0.49",
     "postcss": "^8.4.5",
+    "postcss-sort-media-queries": "^4.3.0",
     "sass": "^1.48.0",
     "sass-loader": "^10.2.0",
     "style-loader": "^0.23.1",
     "svg-spritemap-webpack-plugin": "^4.5.0",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.66.0",
-    "webpack-dev-server": "^3.11.3"
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "sanitize.css": "^12.0.1"
