- Adds default content blocks - Extends BaseElement to remove settings tab - Overrides ElementHolder.ss to make the default class name BEM friendly eg. element--twocolumn - Sets platform php 8 in composer.json

--- a/app/_config/elemental.yml
+++ b/app/_config/elemental.yml
@@ -7,4 +7,6 @@ App\Model\Page:
 DNADesign\Elemental\Controllers\ElementController:
   include_default_styles: false
 DNADesign\Elemental\Models\BaseElement:
+  extensions:
+    - App\Extensions\Elemental\BaseElementExtension
   inline_editable: false
