--- a/themes/default/mix-manifest.json
+++ b/themes/default/mix-manifest.json
@@ -1,5 +1,7 @@
 {
+    "/dist/js/spritemap.js": "/dist/js/spritemap.js",
     "/dist/js/app.js": "/dist/js/app.js",
     "/dist/css/style.css": "/dist/css/style.css",
-    "/dist/css/editor.css": "/dist/css/editor.css"
+    "/dist/css/editor.css": "/dist/css/editor.css",
+    "/dist/webfonts/.gitkeep": "/dist/webfonts/.gitkeep"
 }
