--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,9 @@
 		"silverstripe/redirectedurls": "^2",
 		"symbiote/silverstripe-gridfieldextensions": "^3",
 		"symbiote/silverstripe-grouped-cms-menu": "^4",
-		"wilr/silverstripe-googlesitemaps": "^2"
-	},
+		"wilr/silverstripe-googlesitemaps": "^2",
+		"unclecheese/display-logic": "^2.0"
+    },
 	"require-dev": {
 		"phpunit/phpunit": "^9.5"
 	},
@@ -57,6 +58,9 @@
 			"composer/installers": true,
 			"silverstripe/recipe-plugin": true,
 			"silverstripe/vendor-plugin": true
+		},
+		"platform": {
+			"php": "8"
 		}
 	}
 }
