--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@splidejs/splide": "^4.1.3",
     "sanitize.css": "^12.0.1"
   },
   "browserslist": [
