--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
 	"homepage": "https://www.bigfork.co.uk",
 	"license": "BSD-3-Clause",
 	"require": {
+		"adrhumphreys/silverstripe-textdropdownfield": "^0",
 		"bigfork/htmleditorsrcset": "^2",
 		"bigfork/silverstripe-fail-whale": "^0",
 		"bigfork/silverstripe-sentry-handler": "^1",
@@ -28,7 +29,8 @@
 		"symbiote/silverstripe-gridfieldextensions": "^3",
 		"symbiote/silverstripe-grouped-cms-menu": "^4",
 		"unclecheese/display-logic": "^2.0",
-		"wilr/silverstripe-googlesitemaps": "^2"
+		"wilr/silverstripe-googlesitemaps": "^2",
+		"bigfork/silverstripe-popups": "dev-master"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^9.5"
@@ -63,5 +65,14 @@
 		"platform": {
 			"php": "8"
 		}
-	}
+	},
+	"repositories": [
+		{
+			"type": "path",
+			"url": "/Users/kris/Devsites/popups",
+			"options": {
+				"symlink": true
+			}
+		}
+	]
 }
