--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,8 @@
 		"silverstripe/redirectedurls": "^2",
 		"symbiote/silverstripe-gridfieldextensions": "^3",
 		"symbiote/silverstripe-grouped-cms-menu": "^4",
-		"unclecheese/display-logic": "^2.0",
-		"wilr/silverstripe-googlesitemaps": "^2",
-		"bigfork/silverstripe-popups": "dev-master"
+		"unclecheese/display-logic": "^2",
+		"wilr/silverstripe-googlesitemaps": "^2"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^9.5"
@@ -65,14 +64,5 @@
 		"platform": {
 			"php": "8"
 		}
-	},
-	"repositories": [
-		{
-			"type": "path",
-			"url": "/Users/kris/Devsites/popups",
-			"options": {
-				"symlink": true
-			}
-		}
-	]
+	}
 }
