Adds workaround for accessing protected files on Cloudways hosting

--- a/app/_config/config.yml
+++ b/app/_config/config.yml
@@ -23,6 +23,9 @@ SilverStripe\Core\Injector\Injector:
 App\Model\Page:
   extensions:
     - App\Extensions\Pages\PageExtension
+SilverStripe\Assets\Storage\DBFile:
+  extensions:
+    - App\Extensions\Assets\DBFileExtension
 SilverStripe\ORM\FieldType\DBString:
   extensions:
     - App\Extensions\ORM\DBStringExtension
