Adds Cloudflare cache purge task

--- a/deploy/hosts.yml
+++ b/deploy/hosts.yml
@@ -1,6 +1,8 @@
 .live: &live
   hostname: '__HOSTNAME__'
   user: '__USER__'
+  api_key: ''
+  zone_id: ''
 
 .staging: &staging
   hostname: 'stickyfork'
