--- a/app/_config/elemental.yml
+++ b/app/_config/elemental.yml
@@ -7,6 +7,7 @@ App\Model\Page:
 DNADesign\Elemental\Controllers\ElementController:
   include_default_styles: false
 DNADesign\Elemental\Models\BaseElement:
+  enable_title_in_template: true
   extensions:
     - App\Extensions\Elemental\BaseElementExtension
   inline_editable: false
