--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ SS_DEFAULT_ADMIN_USERNAME="admin"
 SS_DEFAULT_ADMIN_PASSWORD="password"
 
 SS_SEND_ALL_EMAILS_TO="cms@bigfork.co.uk"
+
+# Examples: https://symfony.com/doc/current/mailer.html#using-a-3rd-party-transport
+# MAILER_DSN="<my-dsn>"
