--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,10 @@
 # DB credentials
 SS_DATABASE_CLASS="MySQLDatabase"
 
-SS_DATABASE_USERNAME="root"
-SS_DATABASE_PASSWORD="root"
-SS_DATABASE_SERVER="{sql-host}"
-SS_DATABASE_NAME="{sql-name}"
+SS_DATABASE_USERNAME="db"
+SS_DATABASE_PASSWORD="db"
+SS_DATABASE_SERVER="db"
+SS_DATABASE_NAME="db"
 SS_ENVIRONMENT_TYPE="dev"
 
 SS_DEFAULT_ADMIN_USERNAME="admin"
