--- a/public/.htaccess
+++ b/public/.htaccess
@@ -80,6 +80,9 @@ ServerSignature Off
 #    RewriteRule ^ - [E=PROTO:http]
 #
 #    RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+#    RewriteCond %{SERVER_ADDR} !=127.0.0.1
+#    RewriteCond %{SERVER_ADDR} !=::1
+#    RewriteCond %{HTTP_HOST} !\.ddev\.site$ [NC]
 #    RewriteRule ^ %{ENV:PROTO}://%1%{REQUEST_URI} [R=301,L]
 </IfModule>
 
@@ -98,6 +101,7 @@ ServerSignature Off
 #     RewriteCond %{HTTP_HOST} !^www\. [NC]
 #     RewriteCond %{SERVER_ADDR} !=127.0.0.1
 #     RewriteCond %{SERVER_ADDR} !=::1
+#     RewriteCond %{HTTP_HOST} !\.ddev\.site$ [NC]
 #     RewriteRule ^ %{ENV:PROTO}://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 </IfModule>
 
