Install MFA module by default

--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,11 @@ SS_DEFAULT_ADMIN_PASSWORD="password"
 
 SS_SEND_ALL_EMAILS_TO="cms@bigfork.co.uk"
 
+# Bypass MFA in dev
+BYPASS_MFA=1
+
+# Generate with: php -r 'echo substr(base64_encode(random_bytes(32)), 0, 32) . "\n";'
+SS_MFA_SECRET_KEY=""
+
 # Examples: https://symfony.com/doc/current/mailer.html#using-a-3rd-party-transport
 # MAILER_DSN="<my-dsn>"
