--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,12 @@
         "silverstripe/framework": "^5",
         "silverstripe/graphql": "^5",
         "silverstripe/login-forms": "^5",
+		"silverstripe/mfa": "^5",
         "silverstripe/mimevalidator": "^3",
         "silverstripe/recipe-plugin": "^2",
         "silverstripe/redirectedurls": "^3",
         "silverstripe/sharedraftcontent": "^3",
+		"silverstripe/totp-authenticator": "^5",
         "symbiote/silverstripe-gridfieldextensions": "^4",
         "symbiote/silverstripe-grouped-cms-menu": "^4",
         "unclecheese/display-logic": "^3",
