--- a/app/_config/config.yml
+++ b/app/_config/config.yml
@@ -39,6 +39,9 @@ After: '#blogconfig'
 Only:
   moduleexists: 'silverstripe/blog'
 ---
+SilverStripe\Blog\Model\BlogController:
+  extensions:
+    - App\Extensions\Blog\BlogControllerExtension
 SilverStripe\Blog\Model\BlogPost:
   extensions:
     - App\Extensions\Blog\BlogPostExtension
