Update .env.example with dev mail settings

--- a/.env.example
+++ b/.env.example
@@ -22,4 +22,4 @@ BYPASS_MFA=1
 SS_MFA_SECRET_KEY=""
 
 # Examples: https://symfony.com/doc/current/mailer.html#using-a-3rd-party-transport
-# MAILER_DSN="<my-dsn>"
+MAILER_DSN="smtp://localhost:1025"
