Adds state status grid fields with the GridFieldConfig_OrderableRecordEditor config.

--- a/app/_config/forms.yml
+++ b/app/_config/forms.yml
@@ -4,3 +4,7 @@ Name: app-forms
 SilverStripe\Forms\HTMLEditor\HTMLEditorField:
   default_classes:
     - 'stacked'
+App\Forms\GridField\GridFieldConfig_OrderableRecordEditor:
+  extensions:
+    - SilverStripe\Versioned\VersionedGridFieldStateExtension
+    - SilverStripe\Versioned\VersionedGridFieldArchiveExtension
