Remove stickyfork as the default staging host. Remove db prefix on staging sites.

--- a/deploy/hosts.yml
+++ b/deploy/hosts.yml
@@ -5,9 +5,8 @@
   zone_id: ''
 
 .staging: &staging
-  hostname: 'stickyfork'
-  user: 'bigfork'
-  deploy_path: '/var/www/vhosts/stage/__SLOT__'
+  hostname: '__HOSTNAME__'
+  user: '__USER__'
 
 .defaults: &defaults
   repository: '__REPOSITORY__'
