--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,13 @@
         "silverstripe/framework": "^5",
         "silverstripe/graphql": "^5",
         "silverstripe/login-forms": "^5",
-		"silverstripe/mfa": "^5",
+        "silverstripe/mfa": "^5",
         "silverstripe/mimevalidator": "^3",
         "silverstripe/recipe-plugin": "^2",
         "silverstripe/redirectedurls": "^3",
         "silverstripe/sharedraftcontent": "^3",
-		"silverstripe/totp-authenticator": "^5",
+        "silverstripe/siteconfig": "^5",
+        "silverstripe/totp-authenticator": "^5",
         "symbiote/silverstripe-gridfieldextensions": "^4",
         "symbiote/silverstripe-grouped-cms-menu": "^4",
         "unclecheese/display-logic": "^3",
@@ -34,7 +35,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "symfony/var-dumper": "^5.4"
+        "symfony/var-dumper": "^6"
     },
     "extra": {
         "expose": [
