- Update <head> to be an optimised order - Move all meta tags into the Page::MetaComponents function for easier overriding - Add SimpleSEO extension for being able to update social share images on a per page basis.

--- a/app/_config/config.yml
+++ b/app/_config/config.yml
@@ -35,6 +35,13 @@ SilverStripe\CMS\Model\RedirectorPage:
 SilverStripe\CMS\Model\SiteTree:
   create_default_pages: false
 ---
+Only:
+  moduleexists: 'bigfork/silverstripe-simpleseo'
+---
+App\Model\Page:
+  extensions:
+    - App\Extensions\SimpleSEO\SimpleSEOExtension
+---
 After: '#linkfield'
 ---
 SilverStripe\Admin\LeftAndMain:
