Change the default uploads folder to be called media

--- a/app/_config/forms.yml
+++ b/app/_config/forms.yml
@@ -8,3 +8,5 @@ App\Forms\GridField\GridFieldConfig_OrderableRecordEditor:
   extensions:
     - SilverStripe\Versioned\VersionedGridFieldStateExtension
     - SilverStripe\Versioned\VersionedGridFieldArchiveExtension
+SilverStripe\Assets\Upload:
+  uploads_folder: 'Media'
