Change case of default uploads folder

--- a/app/_config/config.yml
+++ b/app/_config/config.yml
@@ -61,7 +61,7 @@ SilverStripe\Blog\Model\BlogController:
 SilverStripe\Blog\Model\BlogPost:
   extensions:
     - App\Extensions\Blog\BlogPostExtension
-  featured_images_directory: 'Media'
+  featured_images_directory: 'media'
 SilverStripe\Security\Member:
   extensions:
     - App\Extensions\Blog\BlogMemberExtension
