Add sharecare module

--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,14 @@
     "require": {
         "bigfork/silverstripe-fail-whale": "^2",
         "bigfork/silverstripe-image-recipe": "^2",
+		"bigfork/silverstripe-opengraph-fork": "^1",
         "bigfork/silverstripe-sentry-handler": "^2",
         "bigfork/silverstripe-simpleseo": "^3",
         "bigfork/silverstripe-textdropdownfield-fork": "^1",
         "bummzack/sortablefile": "^2.1",
         "dnadesign/silverstripe-elemental": "^5",
         "firebrandhq/silverstripe-phonelink": "^3",
+		"jonom/silverstripe-share-care": "^4",
         "kinglozzer/metatitle": "^3",
         "silverstripe/asset-admin": "^2",
         "silverstripe/assets": "^2",
