Switch build tools from Webpack to Vite

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,4 +1,4 @@
-name: {sitename}
+name: recipe
 type: php
 docroot: public
 php_version: "8.3"
@@ -12,10 +12,16 @@ database:
 use_dns_when_possible: true
 composer_version: "2"
 web_environment: []
-nodejs_version: "18"
+nodejs_version: "22"
 upload_dirs:
     - "assets"
 timezone: Europe/London
+
+web_extra_exposed_ports:
+    - name: vite
+      container_port: 5173
+      http_port: 5172
+      https_port: 5173
 
 # Key features of ddev's config.yaml:
 
