--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -1,42 +1,21 @@
 {
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
-    "dev": "npm run development",
-    "development": "mix",
-    "watch": "mix watch",
-    "watch-poll": "mix watch -- --watch-options-poll=1000",
-    "hot": "mix watch --hot",
-    "prod": "npm run production",
-    "production": "mix --production"
+    "dev": "vite",
+    "build": "vite build"
   },
   "devDependencies": {
-    "browser-sync": "^2.29.3",
-    "browser-sync-webpack-plugin": "^2.3.0",
-    "clean-webpack-plugin": "^2.0.2",
-    "copy-webpack-plugin": "^11.0.0",
-    "cross-env": "^5.2.1",
-    "glob-import-loader": "^1.2.0",
-    "image-minimizer-webpack-plugin": "^3.6.1",
-    "imagemin": "^8.0.1",
-    "imagemin-svgo": "^10.0.1",
-    "laravel-mix": "^6.0.49",
-    "postcss": "^8.4.31",
-    "postcss-sort-media-queries": "^4.3.0",
-    "sass": "^1.48.0",
-    "sass-loader": "^10.2.0",
-    "style-loader": "^0.23.1",
-    "svg-spritemap-webpack-plugin": "^4.5.0",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.94.0",
-    "webpack-dev-server": "^4.11.1"
+    "@spiriit/vite-plugin-svg-spritemap": "^4.1.0",
+    "laravel-vite-plugin": "^1.3.0",
+    "sass": "^1.89.2",
+    "svgo": "^3.3.2",
+    "vite": "^6.3.5",
+    "vite-plugin-image-optimizer": "^1.1.9"
   },
   "dependencies": {
-    "@splidejs/splide": "^4.1.3",
     "sanitize.css": "^12.0.1"
-  },
-  "browserslist": [
-    "last 1 version",
-    "ie 10",
-    ">1%"
-  ]
+  }
 }
