--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ SS_DATABASE_PASSWORD="db"
 SS_DATABASE_SERVER="db"
 SS_DATABASE_NAME="db"
 SS_ENVIRONMENT_TYPE="dev"
+SS_ALLOWED_HOSTS="*"
 
 SS_DEFAULT_ADMIN_USERNAME="admin"
 SS_DEFAULT_ADMIN_PASSWORD="password"
