Allow any password in dev mode

--- a/app/_config/passwords.yml
+++ b/app/_config/passwords.yml
@@ -4,7 +4,10 @@ Except:
   environment: live
 ---
 SilverStripe\Core\Injector\Injector:
-  SilverStripe\Security\PasswordValidator:
-    properties:
-      MinLength: 0
-      HistoricCount: 0
+  SilverStripe\Security\Validation\PasswordValidator:
+    class: 'SilverStripe\Security\Validation\RulesPasswordValidator'
+SilverStripe\Security\Validation\PasswordValidator:
+  historic_count: 0
+SilverStripe\Security\Validation\RulesPasswordValidator:
+  min_length: 0
+  min_test_score: 0
