--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,13 +13,15 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'
+          php-version: '8.3'
+
+      - name: Install dependencies
+        uses: ramsey/composer-install@v3
+        with:
+          composer-options: "--no-scripts --no-plugins"
 
       - name: Deploy
-        uses: bigfork/deployer-actions@v1
+        uses: deployphp/action@v1
         with:
-          command: deploy
-          stage: prod
-          deployer-version: "6.9.0"
+          dep: deploy prod -vvv
           private-key: ${{ secrets.PRIVATE_KEY }}
-          verbosity: -vvv
